--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;;
+}
+
 body {
     background-color: black;
     color: #F6F6F6;
@@ -6,3 +11,4 @@ body {
 .titulo-destaque {
     color: #22D4FD;
 }
+
